<resources>
    <string name="app_name">Battleship Game</string>
    <string name="player1_name">Player 1</string>
    <string name="player2_name">Player 2</string>
    <string name="zero_counter">0</string>
    <string name="two_dots">:</string>
    <string name="welcome">Welcome to the Battleship!</string>
    <string name="enter_name">Enter your name.</string>
    <string name="enter_password">Enter your password.</string>
    <string name="enter_email">Enter your email.</string>
    <string name="start">Get started!</string>
    <string name="join_game">Join game</string>
    <string name="start_game">Start game</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="stats">My statistics</string>
    <string name="hi_message">Hi there,</string>
    <string name="username">Username</string>
    <string name="title">Battleship</string>
    <string name="rules">Rules</string>
    <string name="rule1">On one grid the player arranges ships and records the shots by the opponent. On the other grid the player records their own shots. </string>
    <string name="rule2">Your ships: \n  4 battleship (1 blocks) \n 3 cruisers (1 blocks) \n 2 destroyers (3 blocks) \n 1 torpeda (4 blocks) </string>
    <string name="rule3">Each ship occupies a number of consecutive squares on the grid, arranged either horizontally or vertically.</string>
    <string name="rule4"> If all of a player\'s ships have been sunk, the game is over and their opponent wins. If all ships of both players are sunk by the end of the round, the game is a draw.</string>
    <string name="ok">Ok!</string>
    <string name="your_move">Your move!</string>
    <string name="hit">Hit!</string>
    <string name="miss">Miss!</string>
    <string name="killes">Killed!</string>
    <string name="oppontent_move">Opponent\'s move!</string>
    <string name="my_field">My field</string>
    <string name="game_id_title">Your game id:</string>
    <string name="copy_id">Now your friend can join game by this id.</string>
    <string name="copy">Copy to clickboard</string>
    <string name="close">Close</string>
    <string name="no_stats">No games yet!</string>
    <string name="my_turn">my turn</string>
    <string name="wait">waiting</string>
</resources>
