<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/title_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_holder"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="serif-monospace"
        android:text="@string/title"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/menu_hi_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/hi_message"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/menu_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_hi_message"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/username"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/image_holder"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_below="@id/menu_username"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_layout_draw">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/kitty" />
    </RelativeLayout>

    <Button
        android:id="@+id/menu_stats"
        style="@style/MainButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_join_game"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="serif-monospace"
        android:text="@string/stats"
        android:textStyle="bold" />

    <Button
        android:id="@+id/menu_log_out"
        style="@style/MainButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_stats"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="serif-monospace"
        android:text="@string/log_out"
        android:textStyle="bold" />

    <Button
        android:id="@+id/menu_start_game"
        style="@style/MainButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_game"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="serif-monospace"
        android:text="@string/start_game"
        android:textStyle="bold" />

    <Button
        android:id="@+id/menu_join_game"
        style="@style/MainButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_start_game"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="serif-monospace"
        android:text="@string/join_game"
        android:textStyle="bold" />
</RelativeLayout>