<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stats_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="15dp"
    android:paddingTop="25dp">

    <TextView
        android:id="@+id/two_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/player2_name"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="monospace"
        android:text="@string/two_dots"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/imageView_player1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignStart="@id/player1_name"
        android:layout_alignEnd="@id/player1_name"
        android:layout_alignParentStart="true"
        android:paddingBottom="5dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/idea" />

    <ImageView
        android:id="@+id/imageView_player2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignStart="@id/player2_name"
        android:layout_alignEnd="@id/player2_name"
        android:layout_alignParentEnd="true"
        android:paddingBottom="5dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/idea" />

    <TextView
        android:id="@+id/player2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_player2"
        android:layout_alignParentEnd="true"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/player2_name"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/player1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_player1"
        android:layout_alignParentStart="true"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/player1_name"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/score_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView_player1"
        android:layout_toStartOf="@id/two_dots"
        android:fontFamily="monospace"
        android:text="@string/zero_counter"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/score_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView_player2"
        android:layout_toEndOf="@id/two_dots"
        android:fontFamily="monospace"
        android:text="@string/zero_counter"
        android:textSize="40sp" />
</RelativeLayout>