<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rules_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rules_holder2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:padding="20dp">

        <Button
            android:id="@+id/rules_ok"
            style="@style/MainButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif-monospace"
            android:text="@string/ok"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rule4" />

        <TextView
            android:id="@+id/rule1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="7dp"
            android:fontFamily="monospace"
            android:padding="5dp"
            android:text="@string/rule1"
            android:textColor="@color/colorPrimaryDarkest"
            app:layout_constraintDimensionRatio="2.25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView1"
            app:layout_constraintTop_toTopOf="@id/imageView1" />

        <TextView
            android:id="@+id/rule2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:fontFamily="monospace"
            android:padding="5dp"
            android:text="@string/rule2"
            android:textColor="@color/colorPrimaryDarkest"
            app:layout_constraintDimensionRatio="2.25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView1"
            app:layout_constraintTop_toBottomOf="@id/rule1" />

        <TextView
            android:id="@+id/rule3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="7dp"
            android:fontFamily="monospace"
            android:padding="5dp"
            android:text="@string/rule3"
            android:textColor="@color/colorPrimaryDarkest"
            app:layout_constraintDimensionRatio="2.25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView1"
            app:layout_constraintTop_toTopOf="@id/imageView3" />

        <TextView
            android:id="@+id/rule4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="7dp"
            android:fontFamily="monospace"
            android:padding="5dp"
            android:text="@string/rule4"
            android:textColor="@color/colorPrimaryDarkest"
            app:layout_constraintDimensionRatio="2.25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView1"
            app:layout_constraintTop_toTopOf="@id/imageView4" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/idea"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_rules" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/idea"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rule1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/idea"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rule2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/idea"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rule3" />

        <TextView
            android:id="@+id/title_game_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif-monospace"
            android:text="@string/title"
            android:textColor="@color/colorPrimaryDarkest"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif-monospace"
            android:text="@string/rules"
            android:textColor="@color/colorPrimaryDarkest"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_game_rules" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>