<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg"
    android:padding="20dp">


    <ImageView
        android:id="@+id/catImage"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_below="@id/welcome"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:src="@drawable/kitty" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/catImage"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/enter_email"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDarkest" />

    <TextView
        android:id="@+id/pswd_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_email"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/enter_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDarkest" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_label"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:shadowColor="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryDarkest">

    </EditText>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pswd_label"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:shadowColor="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryDarkest">

    </EditText>

    <Button
        android:id="@+id/get_started"
        style="@style/MainButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_password"
        android:layout_centerInParent="true"
        android:fontFamily="serif-monospace"
        android:padding="15dp"
        android:text="@string/start"
        android:textStyle="bold" />


</RelativeLayout>