<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stats_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@drawable/layout_bg_light"
    android:padding="25dp"
    android:paddingTop="25dp">

    <TextView
        android:id="@+id/two_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="monospace"
        android:text="@string/two_dots"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_player1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@id/two_dots"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/idea" />

    <ImageView
        android:id="@+id/imageView_player2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@id/two_dots"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/idea" />

    <TextView
        android:id="@+id/player2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/player2_name"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_player2" />

    <TextView
        android:id="@+id/player1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/player1_name"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_player1" />

    <TextView
        android:id="@+id/score_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="monospace"
        android:text="@string/zero_counter"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@id/two_dots"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="monospace"
        android:text="@string/zero_counter"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@id/two_dots"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>