<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/game_id_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:padding="20dp">

    <RelativeLayout
        android:id="@+id/image_holder_id_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_layout_draw"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/game_id_view"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".25"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/kitty" />
    </RelativeLayout>

    <Button
        android:id="@+id/game_id_getting_ok"
        style="@style/MainButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="serif-monospace"
        android:padding="20dp"
        android:text="@string/ok"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_game_id" />

    <Button
        android:id="@+id/copy_to_clipboard"
        style="@style/MainButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="serif-monospace"
        android:padding="20dp"
        android:text="@string/copy"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_game_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/game_id_title"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/image_holder_id_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/game_id_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/game_id_title"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/copy_to_clipboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/info_game_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/copy_id"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/copy_to_clipboard" />

</androidx.constraintlayout.widget.ConstraintLayout>