<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_stats_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <Button
        android:id="@+id/ok_no_stats"
        style="@style/MainButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_holder_no_stats"
        android:layout_centerInParent="true"
        android:fontFamily="serif-monospace"
        android:padding="15dp"
        android:text="@string/close"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/no_stats_mes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/image_holder_no_stats"
        android:layout_centerInParent="false"
        android:layout_marginBottom="10dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/no_stats"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDarkest"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/image_holder_no_stats"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_layout_draw">

        <ImageView
            android:id="@+id/imageView_no_stats"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/kitty_lost" />

    </RelativeLayout>

</RelativeLayout>